<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">White Rabbit Planner</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="contacts_title">Contacts</string>
    <string name="home_title">Home</string>
    <string name="calendar_title">Calendar</string>
    <string name="title_activity_contact_book">ContactBook</string>
    <string name="title_activity_cont_book">ContBook</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="secondPhone">Secondary Phone</string>
    <string name="email">Email</string>
    <string name="secondEmail">Secondary Email</string>
    <string name="postal">Postal Address</string>
    <string name="note">Important Notes</string>
    <string name="addContact">Add Contact</string>
    <string name="title_activity_cont_insert">Contact Inserter</string>
    <string name="title_activity_contact_inserter">Contact Insert</string>
	<string name="new_contact">+</string>
	<string name="cancel">Cancel</string>
	<string name="about_summary">Android Calendar View Demo V0.5.0</string>
    <string name="about">About</string>
    <string name="pick_summary">start with ACTION_PICK</string>
    <string name="pick">Pick up a Date</string>
    <string name="show_summary">start with ACTION_VIEW</string>
    <string name="show">Show Calendar</string>
	<string name="hint">Hint: touch the first or last day of month to move to previous or next month.</string>
    <string name="monday">MON</string>
    <string name="tuesday">TUE</string>
    <string name="wednesday">WED</string>
    <string name="thursday">THU</string>
    <string name="friday">FRI</string>
    <string name="saturday">SAT</string>
    <string name="sunday">SUN</string>
</resources>
